# phonemic

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  START-HERE.md  Start-PhoneMic.bat
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  BUILDING.md  PHASE0-BRINGUP.md  PROTOCOL.md  TIER2-3-HANDOFF.md  WEB-CLIENT.md
pc-app/core/: Cargo.toml
pc-app/core/src/: crypto.rs  denoise.rs  jitter_buffer.rs  lib.rs  main.rs  sink.rs  transport.rs  voice_fx.rs
pc-app/driver/: README.md  driver.c  driver.h  phonemic.inf  phonemic.vcxproj
pc-app/gui/: Cargo.toml
pc-app/gui/src/: main.rs
pc-app/ipc/: Cargo.toml  README.md  ring.h
pc-app/ipc/src/: lib.rs
pc-app/web-gateway/: Cargo.toml
pc-app/web-gateway/src/: driver_feed.rs  main.rs
phone-app/: gradle.properties  gradlew  settings.gradle.kts
phone-app/app/: build.gradle.kts
phone-app/app/src/main/: AndroidManifest.xml
phone-app/app/src/main/java/com/phonemic/: MainActivity.kt  NativeBridge.kt  StreamingService.kt  VoiceEffects.kt
phone-app/app/src/main/res/drawable/: ic_launcher_fg.xml
phone-app/app/src/main/res/layout/: activity_main.xml
phone-app/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
phone-app/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
phone-app/native/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  crypto.h  jni_bridge.cpp  wire.h
phone-app/native/test/: crypto_test.c  wire_test.cpp
protocol/: Cargo.toml
protocol/src/: lib.rs
web-client/: index.html  pcm-worklet.js
