[workspace]
resolver = "2"
members = [
    "protocol",
    "pc-app/core",
    "pc-app/gui",
    "pc-app/ipc",
    "pc-app/web-gateway",
]
# web-gateway needs TLS (getUserMedia requires a secure context), which pulls
# raw-dylib crates that the incomplete windows-gnu toolchain on some dev boxes
# can't build (missing `as`). Keep it out of the default build so protocol +
# core stay green; build it explicitly with `-p phonemic-web-gateway` on a
# complete toolchain. See docs/WEB-CLIENT.md.
default-members = [
    "protocol",
    "pc-app/core",
    "pc-app/ipc",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["The PhoneMic Authors"]
repository = "https://github.com/siddarth1872004/phonemic"
rust-version = "1.80"

# Thin, fast, small release profile for the audio hot path.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true          # drop symbols — smaller exe, minimal bloat
panic = "abort"       # no unwinding tables — smaller + slightly faster
